# nsynergy

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: android-engineer.md  integration-qa.md  react-frontend.md  rust-backend.md
.claude/skills/nsynergy-build/: skill.md
.claude/skills/nsynergy-orchestrator/: skill.md
.github/workflows/: release.yml
_workspace/: qa_baseline_analysis.md  qa_final_integration_report.md  qa_report_android.md  qa_t15_tauri_invoke_contract.md  qa_t16_crate_api_boundaries.md  qa_t17_build_test_pass.md
crates/nsynergy-client/: Cargo.toml
crates/nsynergy-client/src/: client.rs  handler.rs
crates/nsynergy-client/tests/: integration_test.rs
crates/nsynergy-core/: Cargo.toml
crates/nsynergy-core/src/: capture.rs  clipboard.rs  config.rs  discovery.rs  event.rs  inject.rs  lib.rs  permissions.rs  protocol.rs  screen.rs  security.rs  touch.rs
crates/nsynergy-core/src/platform/: desktop.rs  mobile.rs  mod.rs
crates/nsynergy-net/: Cargo.toml
crates/nsynergy-net/src/: lib.rs  reconnect.rs  tcp.rs  tls.rs  udp.rs
crates/nsynergy-server/: Cargo.toml
crates/nsynergy-server/src/: handler.rs  server.rs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  runtime.rs  tray.rs
src/components/: ConnectionIndicator.tsx  DeviceList.tsx  PairingDialog.tsx  ScreenLayout.tsx  Settings.tsx  StatusBar.tsx
