[workspace]
members = [
    "crates/nsynergy-core",
    "crates/nsynergy-server",
    "crates/nsynergy-client",
    "crates/nsynergy-net",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Input
rdev = "0.5"
enigo = "0.2"

# Clipboard
arboard = "3"

# Network / TLS
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"
rustls-pemfile = "2"

# Crypto / Random
rand = "0.8"

# Discovery
mdns-sd = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Internal crates
nsynergy-core = { path = "crates/nsynergy-core" }
nsynergy-server = { path = "crates/nsynergy-server" }
nsynergy-client = { path = "crates/nsynergy-client" }
nsynergy-net = { path = "crates/nsynergy-net" }
