[package]
name = "nsynergy-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nsynergy_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nsynergy-core = { workspace = true }

[features]
default = ["custom-protocol", "desktop"]
custom-protocol = ["tauri/custom-protocol"]
desktop = ["tauri/tray-icon"]
mobile = []
