[package]
name = "nsynergy-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
mdns-sd = { workspace = true }
rdev = { workspace = true }
enigo = { workspace = true }
arboard = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
